<resources>
    <string name="app_name">Track Items</string>
    <string name="item_name">Item Name</string>
    <string name="add">Add</string>
    <string name="bag_name">Bag Name</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="desc">Description</string>
    <string name="action_add">Add</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="search_here">Search here</string>
    <string name="add_bag">Add Bag</string>
    <string name="choose_color">Choose Color</string>
    <string name="bag_description">Bag Description</string>
    <string name="add_item">Add Item</string>
    <string name="delete_icon_content_desc">Delete item</string>
    <string name="add_item_title">Add Item</string>
    <string name="action_update">Update</string>
    <string name="item">Item</string>
    <string name="action_add_new_item">Add new item</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync items periodically with cloud</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="made_with_from">Made with ❤ from 🏠</string>
    <string name="copyright">Copyright 2020 Adit Modhvadia</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_hint">Password</string>
    <string name="email_address_hint">Email Address</string>
    <string name="login_button_text">Login</string>
    <string name="add_bag_title">Add Bag</string>
    <string name="item_detail_title">Item</string>
    <string name="item_list_title">Track Items</string>
    <string name="app_tag_line">Store | Track | Forget</string>
    <string name="logout_title">Logout</string>
    <string name="action_delete">Delete</string>
    <string name="item_deleted_successfully">Item deleted</string>
    <string name="invalid_email_msg">Please enter valid email address</string>
    <string name="invalid_password_msg">Password should be greater than 6 characters</string>
    <string name="or_label">OR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_compose">ComposeActivity</string>
</resources>
