<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_view"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView" />

    <item
            android:id="@+id/action_add_bag"
            android:title="@string/add_bag"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_settings"
            android:title="@string/settings"
            app:showAsAction="never" />

    <group android:id="@+id/group_logout">
        <item
                android:id="@+id/action_logout"
                android:title="@string/logout_title"
                app:showAsAction="never" />
    </group>
</menu>