<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.fazemeright.myinventorytracker.ui.splash.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_itemListFragment"
            app:destination="@id/itemListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.fazemeright.myinventorytracker.ui.login.LoginFragment"
        android:label="@string/title_activity_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_itemListFragment"
            app:destination="@id/itemListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/itemListFragment"
        android:name="com.fazemeright.myinventorytracker.ui.itemlist.ItemListFragment"
        android:label="@string/item_list_title"
        tools:layout="@layout/fragment_item_list">
        <action
            android:id="@+id/action_itemListFragment_to_addItemFragment"
            app:destination="@id/addItemFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_itemListFragment_to_addBagFragment"
            app:destination="@id/addBagFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_itemListFragment_to_itemDetailFragment"
            app:destination="@id/itemDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.fazemeright.myinventorytracker.ui.additem.AddItemFragment"
        android:label="@string/add_item_title"
        tools:layout="@layout/fragment_add_item">
        <action
            android:id="@+id/action_addItemFragment_to_itemListFragment"
            app:destination="@id/itemListFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:popUpTo="@id/itemListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addBagFragment"
        android:name="com.fazemeright.myinventorytracker.ui.addbag.AddBagFragment"
        android:label="@string/add_bag_title"
        tools:layout="@layout/fragment_add_bag">
        <action
            android:id="@+id/action_addBagFragment_to_itemListFragment"
            app:destination="@id/itemListFragment"
            app:popUpTo="@id/itemListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.fazemeright.myinventorytracker.ui.itemdetail.ItemDetailFragment"
        android:label="@string/item_detail_title"
        tools:layout="@layout/fragment_item_detail">
        <argument
            android:name="itemId"
            app:argType="long" />
        <action
            android:id="@+id/action_itemDetailFragment_to_itemListFragment"
            app:destination="@id/itemListFragment"
            app:popUpTo="@id/itemListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>