<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="com.fazemeright.myinventorytracker.addbag.AddBagViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/bag_name"
                app:layout_constraintVertical_chainStyle="packed"
                android:ems="10"
                android:id="@+id/edtBagName" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/layoutColorHolder"
                android:layout_marginBottom="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutColorHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edtBagName" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/edtBagDesc" android:layout_marginBottom="16dp">
            <Button
                    android:id="@+id/btnChooseColor"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/choose_color"
                    app:layout_constraintTop_toTopOf="@+id/viewBagColorDisplay"
                    app:layout_constraintBottom_toBottomOf="@+id/viewBagColorDisplay"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/viewBagColorDisplay"/>
            <View
                    android:layout_height="32dp"
                    android:layout_width="32dp" android:id="@+id/viewBagColorDisplay"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/btnChooseColor"
                    app:layout_constraintHorizontal_bias="0.5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/bag_description"
                android:ems="10"
                android:id="@+id/edtBagDesc"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutColorHolder" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/btnAddBag" android:layout_marginBottom="16dp"/>
        <Button
                android:text="@string/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddBag"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtBagDesc"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>