<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.fazemeright.myinventorytracker.additem.AddItemViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/edtItemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                tools:text="Item Name"
                android:hint="@string/item_name"
                android:text="@{viewModel.itemName}"
                app:layout_constraintVertical_chainStyle="packed"
                android:ems="10" android:layout_marginEnd="@dimen/spacing_normal"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/spacing_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/spinnerBag"
                android:layout_marginBottom="@dimen/spacing_normal"/>

        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Bag"
                android:id="@+id/spinnerBag" android:layout_marginEnd="@dimen/spacing_normal"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/spacing_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtItemName"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/edtItemDesc"
                android:layout_marginBottom="@dimen/spacing_normal"/>

        <EditText
                android:layout_width="0dp"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                tools:text="Item Desc"
                android:hint="@string/desc"
                android:text="@{viewModel.desc}"
                android:maxLines="10"
                android:minLines="2"
                android:lines="4"
                android:ems="10"
                android:id="@+id/edtItemDesc" android:layout_marginEnd="@dimen/spacing_normal"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/spacing_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerBag"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/edtItemQuantity"
                android:layout_marginBottom="@dimen/spacing_normal"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:text="Item Quantity"
                android:hint="@string/item_quantity"
                android:text="@{String.valueOf(viewModel.itemQuantity)}"
                android:imeOptions="actionDone"
                android:ems="10"
                android:id="@+id/edtItemQuantity" android:layout_marginEnd="@dimen/spacing_normal"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/spacing_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtItemDesc"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

        <!--android:onClick="@{() -> viewModel.onAddClicked(edtItemName.getText().toString(),edtBagName.getText().toString(),edtItemDesc.getText().toString(),edtItemQuantity.getText().toString())}"-->
